--- a/templates/main.html
+++ b/templates/main.html
@@ -316,6 +316,28 @@
     #upload-form {
         display: none;
     }
+     .footer {
+            text-align: center;
+            background-color: #2c3e50;
+            color: #ecf0f1;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+            max-width: 600px;
+
+            margin: 10px auto;
+        }
+
+        .footer p {
+            margin: 0;
+            line-height: 1.5;
+        }
+
+        .footer hr {
+            border: 0;
+            border-top: 1px solid #ecf0f1;
+            margin: 10px 0;
+        }
 </style>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -348,6 +370,8 @@
 <div id="overlay"></div>
 <div id="loader"></div>
 
+
+
 <div class="window">
     <div class="top">
         <div class="panel">
@@ -363,7 +387,7 @@
         </div>
         <div class="nav">
       <span class="address">
-        <input type="text" value="FaceConnection" class="address" editable="true" style=" margin-top: 8px;">        <i
+        <input type="text" value="사진관 나무 - FaceConnection" class="address" editable="true" style=" margin-top: 8px;">        <i
               class="fa fa-refresh"></i>
       </span>
         </div>
@@ -445,5 +469,14 @@
         </div>
     </div>
 
+</div>
+
+<div class="footer">
+    <p>
+        본 프로그램은 사진관 나무에서 증명사진 식별 및 과도한 후보정 작업을 판독하기 위해 개발한, 솔루션 소개를 목적으로 제작되었습니다.<br>
+        사진관 나무의 허락 없이 무단으로 사용을 절대 금합니다.
+    </p>
+    <hr>
+    <p>- Copyright 2024. Studio Namu all rights reserved -</p>
 </div>
 </body>
